# FloodNet-Radar

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  flood_sensor.gs  prj.conf  setup.ps1  setup.sh
boards/: circuitdojo_feather_nrf9151_ns.conf  circuitdojo_feather_nrf9151_ns.overlay
src/: cellular.c  cellular.h  config.h  main.c  radar.c  radar.h  uart.c  uart.h
